--- a/luca-client/src/App.css
+++ b/luca-client/src/App.css
@@ -1,38 +1,177 @@
-.App {
+
+.html {
+  font-size: 16px;
+}
+
+/* mainpage */
+
+.body {
+  background-color: #d3d1d1;
+  height: 600px;
+  display: flex;
+  flex-direction: column;
+}
+
+.start-box {
+  background-color: #7a7a7a;
+  display: flex;
+  flex-direction: column;
   text-align: center;
+  justify-content: space-around;
+  height: 250px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.project-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100%;
+  margin-top: 40px;
+}
+.project-container> sortbox {
+  width: 1280px;
+  border-bottom: solid;
+  padding: 10px;
+  display: flex;
+  justify-content: flex-end;
+}
+.project-container> projectbox {
+  /* background-color: red; */
+  margin-top: 10px;
+}
+
+/* projectcard */
+
+.project-card {
+  background-color: #858585;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 1300px;
+  height: 100px;
+}
+
+.projectcard-head {
+  /* background-color: #979797; */
+  display: flex;
+  justify-content: space-between;
+  height: 40px;
+  
+}
+.projectcard-head> div {
+  /* background-color: red; */
+  display: flex;
+  margin-top: 10px;
+}
+
+.projectcard-head topic {
+  /* background-color: aliceblue; */
+  width: 200px;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.projectcard-head date {
+  /* background-color: aliceblue; */
+  width: 200px;
+  margin-left: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.projectcard-head type {
+  /* background-color: aliceblue; */
+  width: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.projectcard-head modifybox {
+  /* background-color: aliceblue; */
+  width: 90px;
+  margin-left: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.projectcard-bottom {
+  /* background-color: #c7c5c5; */
+  display: flex;
+  justify-content: space-between;
+  height: 30px;
+}
+
+
+/* Mypage */
+
+.mypage-body {
+  /* width: 1300px; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.mypage-info {
+  background-color: #616060;
+  width: 1300px;
+  display: flex;
+  align-items: center;
+}
+
+.mypage-info> profileimg {
+  margin-left: 110px;
+}
+
+.mypage-info> userinfo {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  margin-left: 130px;
+  height: 8rem;
+}
+
+.mypage-info> userinfo> userprofile {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 5rem;
+}
+
+.mypage-info> userinfo username {
+  font-size: 40px;
+}
+
+.mypage-info> userinfo> useremail {
+
+}
+
+.modifybutton {
+  width: 200px;
+}
+
+.pwbutton {
+  width: 200px;
+  margin-left: 20px;
+}
+
+.mypage-info decisionbutton {
+  display: flex;
+  flex-direction: column;
+}
+
+.mypage-info decisionbutton cancelbuttton {
+  width: 90px;
+}
+
+.mypage-info decisionbutton savebutton {
+  width: 90px;
+  margin-left: 20px;
+}
+
+.mypage-info decisionbutton withdrawal {
+  width: 200px;
 }
