--- a/luca-server/template/authMail.ejs
+++ b/luca-server/template/authMail.ejs
@@ -1,10 +1,78 @@
 <html>
 
 <body>
-        <p style='color:black'>회원 가입을 위한 인증번호입니다.</p>
-        <h2>
-                <%= authCode %>
-        </h2>
+        <div bgcolor="#fafafa" marginheight="0" marginwidth="0" style="width:100%!important;min-width:100%;background-color:#fafafa;color:#333333;font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;font-weight:normal;text-align:center;line-height:20px;font-size:14px;margin:0;padding:0">
+        <table style="border-spacing:0;border-collapse:collapse;vertical-align:top;text-align:center;height:100%;width:100%;background-color:#fafafa;color:#333333;font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;font-weight:normal;line-height:20px;font-size:14px;margin:0;padding:0" bgcolor="#fafafa">
+                <tbody><tr style="vertical-align:top;text-align:center;padding:0" align="center">
+                <td align="center" valign="top" style="word-break:break-word;border-collapse:collapse!important;vertical-align:top;text-align:center;color:#333333;font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;font-weight:normal;line-height:20px;font-size:14px;margin:0;padding:0">
+                <center style="width:100%;min-width:580px">
+                <table style="border-spacing:0;border-collapse:collapse;vertical-align:top;text-align:center;width:100%;padding:0px">
+                        <tbody><tr style="vertical-align:top;text-align:center;padding:0" align="center">
+                        <td align="center" style="word-break:break-word;border-collapse:collapse!important;vertical-align:top;text-align:center;color:#333333;font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;font-weight:normal;line-height:20px;font-size:14px;margin:0;padding:0" valign="top">
+                        <center style="width:100%;min-width:580px">
+                        <table style="border-spacing:0;border-collapse:collapse;vertical-align:top;text-align:inherit;width:580px;margin:0 auto;padding:0">
+                                <tbody><tr style="vertical-align:top;text-align:center;padding:0" align="center">
+                                <td style="word-break:break-word;border-collapse:collapse!important;vertical-align:top;text-align:center;color:#333333;font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;font-weight:normal;line-height:20px;font-size:14px;margin:0;padding:0 0px 0 0" align="center" valign="top">
+                                <table style="border-spacing:0;border-collapse:collapse;vertical-align:top;text-align:center;width:540px;margin:0 auto;padding:0">
+                                <tbody><tr style="vertical-align:top;text-align:center;padding:0" align="center">
+                                        <td style="word-break:break-word;border-collapse:collapse!important;vertical-align:top;text-align:center;color:#333333;font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;font-weight:normal;line-height:20px;font-size:14px;margin:0;padding:0px 0px 10px" align="center" valign="top">
+                                        <div style="text-align:center" align="center">                                        
+                                        </a>
+                                        </div>
+                                        </td>
+                                        <td style="word-break:break-word;border-collapse:collapse!important;vertical-align:top;text-align:center;width:0px;color:#333333;font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;font-weight:normal;line-height:20px;font-size:14px;margin:0;padding:0" align="center" valign="top"></td>
+                                </tr></tbody>
+                                </table>
+                                </td>
+                                </tr></tbody>
+                        </table>
+                        </center>
+                        </td>
+                        </tr></tbody>
+                </table>
+                
+                <table style="border-spacing:0;border-collapse:collapse;vertical-align:top;text-align:inherit;width:580px;margin:0 auto;padding:0">
+                        <tbody><tr style="vertical-align:top;text-align:center;padding:0" align="center">
+                        <td style="word-break:break-word;border-collapse:collapse!important;vertical-align:top;text-align:center;color:#333333;font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;font-weight:normal;line-height:20px;font-size:14px;margin:0;padding:0" align="center" valign="top">
+                        <table style="border-spacing:0;border-collapse:collapse;text-align:center;width:100%;display:block;padding:0px">
+                        <tbody><tr style="vertical-align:top;text-align:center;padding:0" align="center">
+                                <td style="word-break:break-word;border-collapse:collapse!important;vertical-align:top;text-align:center;color:#333333;font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;font-weight:normal;line-height:20px;font-size:14px;margin:0;padding:0 0px 0 0" align="center" valign="top">
+                                <div style="background-color:#ffffff;border-radius:3px;padding:20px;border:1px solid #dddddd">
+                                <table style="border-spacing:0;border-collapse:collapse;vertical-align:top;text-align:center;width:540px;margin:0 auto;padding:0">
+                                <tbody><tr style="vertical-align:top;text-align:center;padding:0" align="center">
+                                        <td style="word-break:break-word;border-collapse:collapse!important;vertical-align:top;text-align:center;color:#333333;font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;font-weight:normal;line-height:20px;font-size:14px;margin:0;padding:0px 0px 0" align="center" valign="top">
+                                        <div>
+                                        
+                                        <h1 style="color:#333;font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;font-weight:300;text-align:center;line-height:1.2;word-break:normal;font-size:24px;margin:10px 0 25px;padding:0" align="center">
+                                        Welcome to <strong>Luca</strong>
+                                        </h1>
+                                        <hr style="color:#d9d9d9;background-color:#d9d9d9;height:1px;margin:20px 0;border:none">
+                                        <p style="word-wrap:normal;font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;font-size:14px;font-weight:normal;color:#333;line-height:20px;text-align:left;margin:15px 0 5px;padding:0" align="left">
+                                        <p style='color:black'>회원 가입을 위한 인증번호입니다.</p>
+                                        <h2>
+                                                <%= authCode %>
+                                        </h2>
+                                        </p>
+                                        <div style="text-align:center;color:#ffffff;padding:20px 0 25px" align="center">
+                                        
+                                        </p>
+                                        </div>
+                                        </td>
+                                        <td style="word-break:break-word;border-collapse:collapse!important;vertical-align:top;text-align:center;width:0px;color:#333333;font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;font-weight:normal;line-height:20px;font-size:14px;margin:0;padding:0" align="center" valign="top"></td>
+                                </tr></tbody>
+                                </table>
+                                </div>
+                                </td>
+                        </tr></tbody>
+                        </table>
+                        </td>
+                        </tr></tbody>
+                </table>
+                </center>
+                </td>
+                </tr></tbody>
+        </table>
+        </div>
 </body>
 
 </html>
